--- a/README.rdoc
+++ b/README.rdoc
@@ -1,22 +1,6 @@
 == README
 
 Este README normalmente documentaria quaisquer etapas necessárias para obter o
-aplicativo instalado e funcionando.
+aplicativo instalado e funcionando .
+ Essa aplicação enquadra-se como teste da empresa NOBE SISTEMAS para fins de programador Ruby.
 
-Coisas que você pode querer cobrir:
-
-* Versão Ruby
-
-* Dependências do sistema
-
-* Configuração
-
-* Criação de banco de dados
-
-* Inicialização do banco de dados
-
-* Como executar o conjunto de testes
-
-* Serviços (filas de trabalho, servidores de cache, motores de busca, etc.)
-
-* Instruções de implantação
